brat/test/golden/error/compjuxt_syn_chk.brat.golden
Error in test/golden/error/compjuxt_syn_chk.brat@FC {start = Pos {line = 7, col = 9}, end = Pos {line = 7, col = 11}}:
  Parse error test/golden/error/compjuxt_syn_chk.brat:8:11:
  |
8 | num_lit = { (1, 2); id2() }
  |           ^^^^^^^^^^^^^^^^^
unexpected { (1, 2); id2() }
expecting (...), <>, Comment, Horizontal space, \n, bool, float, hole, let ... in, name, nat, pattern, port pull, string, thunk, or vector literal


